[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/codex.gd" id="1"]

[node name="Codex" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 2
visible = false
mouse_filter = 2
process_mode = 2
script = ExtResource("1")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_left = 32
custom_constants/margin_top = 32
custom_constants/margin_right = 32
custom_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 16
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Header" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
size_flags_horizontal = 3
custom_constants/separation = 12

[node name="Title" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Header"]
text = "Field Codex"
autowrap_mode = 3
size_flags_horizontal = 3

[node name="CloseButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/Header"]
text = "Close"
focus_mode = 2

[node name="StatusLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
text = "Codex entries unlock as you discover new particle families."
autowrap_mode = 3
size_flags_horizontal = 3

[node name="Content" type="HSplitContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
size_flags_horizontal = 3
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 420)

[node name="EntryList" type="ItemList" parent="PanelContainer/MarginContainer/VBoxContainer/Content"]
size_flags_horizontal = 1
size_flags_vertical = 3
select_mode = 0

[node name="EntryPanel" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Content"]
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 8

[node name="EntryTitle" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Content/EntryPanel"]
text = ""
autowrap_mode = 3
size_flags_horizontal = 3

[node name="TagsLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Content/EntryPanel"]
text = "Tags: None"
autowrap_mode = 3
size_flags_horizontal = 3

[node name="BodyScroll" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Content/EntryPanel"]
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EntryBody" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/Content/EntryPanel/BodyScroll"]
size_flags_horizontal = 3
size_flags_vertical = 3
fit_content = true
scroll_active = false
autowrap_mode = 3
bbcode_enabled = false
